    eg., saved on disk.
    o NMF strategies can now define default values for their parameters,
    eg., `seed` to associate them with a seeding method that is not the 
    default method, `maxIter` to make default runs with more iterations 
    (for algorithms defined as NMFStrategyIterative), or any other
    algorithm-specific parameter.

CHANGES

    o All vignettes are now generated using knitr.
    o New dependency to pkgmaker which incorporated many of the 
    general utility functions, initially defined for the NMF package.


*************************************************************************
*                       Changes in version 0.8.6                        *
*************************************************************************

NEW FEATURES

    o Formula based NMF models that can incorporate fixed terms, which may 
    be used to correct for covariates or define group specific offsets.

CHANGES
   
   o Subsetting an NMF object with a single index now returns an NMF object, 
   except if argument drop is not missing (i.e. either TRUE or FALSE). 

*************************************************************************
*                       Changes in version 0.6.03                       *
*************************************************************************

WARNING
    Due to the major changes made in the internal structure of the standard NMF 
    models, previous NMF fits are not compatible with this version.

NEW FEATURES

    o The factory function nmfModel has been enhanced and provides new 
    methods that makes more easier the creation of NMF objects.
    See ?nmfModel.
    
    o A new heatmap drawing function 'aheatmap' (for annotated heatmap) is 
    now used to generate the different heatmaps (basismap, coefmap and consensusmap). 
    It is a enhancement/fork of the function pheatmap from package pheatmap and draw 
    -- I think -- very nice heatmaps, providing a convenient and flexible 